[gd_scene load_steps=3 format=3 uid="uid://bh6qgdb4804jt"]

[ext_resource type="Script" path="res://Scenes/player.gd" id="1_fjy7w"]
[ext_resource type="PackedScene" uid="uid://db1oeulwh7nea" path="res://Scenes/PlayerHead.tscn" id="2_ep0gh"]

[node name="Player" type="Node2D"]
script = ExtResource("1_fjy7w")

[node name="BodyLineBorder" type="Line2D" parent="."]
position = Vector2(-136, -75)
width = 35.0
default_color = Color(0, 0, 0, 1)
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
round_precision = 14

[node name="BodyLine" type="Line2D" parent="."]
position = Vector2(-136, -75)
width = 29.0
default_color = Color(0.0156863, 0.776471, 0.780392, 1)
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
round_precision = 14

[node name="BodySegmentList" type="Node2D" parent="."]

[node name="PlayerHead" parent="." instance=ExtResource("2_ep0gh")]

[connection signal="new_body_point" from="PlayerHead" to="." method="_on_player_head_new_body_point"]
